# inventree-subito-plugin

./: README.md  pyproject.toml
inventree_subito_plugin/: __init__.py  subito.py
inventree_subito_plugin/templates/subito/: subito.html
tests/: test_inventree_subito_plugin.py
