[project]
name = "inventree-subito-plugin"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = ""}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.entry-points.console_scripts]
inventree-subito-plugin = "inventree_subito_plugin.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
