[project]
name = "inventree-subito-plugin"
version = "0.3"
description = "Subito.it integration for InvenTree"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
]
keywords = ["inventree", "inventree-plugin", "subito", "inventree-subito"]
license.text = "MIT"
authors = [{ name = "Jackymancs4" }]

[project.urls]
Homepage = "https://github.com/Jackymancs4/inventree-subito-plugin"

[project.entry-points."inventree_plugins"]
inventree-subito-plugin = "inventree_subito_plugin:subito.SubitoPlugin"

[tool.isort]
line_length = 96
lines_after_imports = 1
multi_line_output = 5
combine_as_imports = true
combine_straight_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "INVENTREE", "FIRSTPARTY", "LOCALFOLDER"]
known_inventree = ["company", "order", "part"]
known_firstparty = ["plugin"]
